Add Slack module sample

--- a/sample/provision/roles/myproject/tasks/main.yml
+++ b/sample/provision/roles/myproject/tasks/main.yml
@@ -358,3 +358,15 @@
       - Reply-To=mehrdad.drpc@yahoo.com
       - X-Special="Something or other"  
     charset: utf-8
+
+- name: --- Send notification message via Slack all options ---
+  community.general.slack:
+    token: thetoken/generatedby/slack
+    msg: '{{ inventory_hostname }} completed'
+    channel: '#ansible'
+    thread_id: '1539917263.000100'
+    username: 'Ansible on {{ inventory_hostname }}'
+    icon_url: http://www.example.com/some-image-file.png
+    link_names: 0
+    parse: 'none'
+  delegate_to: localhost
