--- a/sample/provision/roles/myproject/tasks/main.yml
+++ b/sample/provision/roles/myproject/tasks/main.yml
@@ -372,3 +372,13 @@
     parse: 'none'
   delegate_to: localhost
   tags: [slack_mod, notif]
+
+- name: --- Send notification message via Mattermost all options ---
+  community.general.mattermost:
+    url: http://mattermost.example.com
+    api_key: my_api_key
+    text: '{{ inventory_hostname }} completed'
+    channel: notifications
+    username: 'Ansible on {{ inventory_hostname }}'
+    icon_url: http://www.example.com/some-image-file.png
+
