--- a/sample/provision/roles/myproject/tasks/main.yml
+++ b/sample/provision/roles/myproject/tasks/main.yml
@@ -381,4 +381,16 @@
     channel: notifications
     username: 'Ansible on {{ inventory_hostname }}'
     icon_url: https://mycompany.ir/image-file.png
+  tags: [mattermost_mod, notif]
+  
+- name: --- Send notify to Telegram ---
+  community.general.telegram:
+    token: '9999999:XXXXXXXXXXXXXXXXXXXXXXX'
+    api_args:
+      chat_id: 000000
+      parse_mode: "markdown"
+      text: "Your precious application has been deployed: https://example.com"
+      disable_web_page_preview: True
+      disable_notification: True
+  tags: [telegram_mod, notif]
 
