--- a/sample/provision/roles/myproject/tasks/main.yml
+++ b/sample/provision/roles/myproject/tasks/main.yml
@@ -649,3 +649,10 @@
     msg: "Nginx is already installed"
   when: "'nginx' in ansible_facts.packages"
   tags: [cond_3]
+
+- name: --- check the variable is define or not ---
+  pause:
+    prompt: "The backup path variable is not define, please enter the variable name: "
+  register: backup_path_2
+  when: backup_path is not define
+  tags: [cond_4]
