Add Condition tag separator

--- a/sample/provision/roles/myproject/tasks/main.yml
+++ b/sample/provision/roles/myproject/tasks/main.yml
@@ -604,6 +604,9 @@
       - '*.conf'
   tags: [local_action_mod]
 
+
+# Conditions
+
 - name: --- set_fact module redhat ---
   set_fact: 
     package_name: httpd
